--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="clock">
-
+            <h3>Mohd Uvais</h3>
             <div style="--clr: black; --h: 75px" id="hour" class="hand"><i></i></div>
             <div style="--clr: #05020a; --h: 85px" id="min" class="hand"><i></i></div>
             <div style="--clr: #086432; --h: 95px" id="sec" class="hand"><i></i></div>
